Adjusted image size to deal with overflow: auto issue. Horizontal scroll was showing.

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -146,6 +146,10 @@ footer > .row {
 	color: $secondary-text-color-on-red;
 }
 
+.splash-image img {
+	width: 723px;
+}
+
 .header-link a, .splash h1, .splash a, .login-signup h1 {
 	color: $primary-text-color-on-red;
 }
